--- a/login_page.html
+++ b/login_page.html
@@ -5,14 +5,15 @@
 	<link href="css/style.css" rel="stylesheet">
 </head>
 <center>
-	<h6><div class="logo">
-		<img src=images/mind.svg></div></h6>
+	<div class="logo">
+		<img src="images/logo.svg" width="240" height="90"></div>
+
 <form>
 	<div class="header">Login to Your Account</div>
-	<input type="text" placeholder="Email"><br>
-	<input type="text" placeholder="Password"><br>
+	<input type="text" placeholder="Email" class="Email"><br>
+	<input type="text" placeholder="Password" class="Password1"><br>
 	<input type="submit" value="Login" class="login"><br>
-	<div class"content">Forgot your Password?</div>
+	<div class="Password2">Forgot your password?</div>
 </form>
 </center>
 
